@@ -185,7 +185,7 @@ Messages {
 #
 # WARNING! the following will create a file that you must cycle from
 #          time to time as it will grow indefinitely. However, it will
-#          also keep all your messages if the scroll off the console.
+#          also keep all your messages if they scroll off the console.
 #
   append = "@working_dir@/log" = all, !skipped
 }
